improved javascript functions, added basic styling

--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
 .hide {
    display: none; 
 }
+
+body {
+   background-color: rgb(94, 94, 94);
+}
+
+h1 {
+   color: white;
+}
+
+#timer-text {
+   color: white;
+}
