--- a/style.css
+++ b/style.css
@@ -19,15 +19,11 @@ h1,
    color: white;
 }
 
-#timer-text {
-   color: white;
-   font-size: 1.3rem;
-}
-
-.questions {
+#questions {
    display: flex;
    flex-direction: column;
    align-items: space-around;
+   text-align: center;
 }
 
 h2{
@@ -43,8 +39,21 @@ button {
    margin: 10px;
 }
 
-#timer-text {
-   position: relative;
+.timer-text {
+   color: white;
+   font-size: 1.3rem;
    top: 2px;
-   left: 1px;
+   text-align: right;
 }
+
+#check,
+#game-over {
+   color: white;
+   text-align: center;
+}
+
+#game-over {
+   color: white;
+   text-align: center;
+   font-size: 1.5rem;
+ }
